fix FF bug with hidden overflow

--- a/src/Vitoop/InfomgmtBundle/Resources/public/css/cupertino/jquery-ui-1.10.4.custom.css
+++ b/src/Vitoop/InfomgmtBundle/Resources/public/css/cupertino/jquery-ui-1.10.4.custom.css
@@ -541,12 +541,12 @@ button.ui-button::-moz-focus-inner {
 }
 
 .ui-dialog {
-    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
     padding: .2em;
     outline: 0;
+    overflow: visible;
 }
 
 .ui-dialog .ui-dialog-titlebar {
